<resources>
    <string name="app_name">Grafy</string>
    <string name="j">Wierzchołek 2</string>
    <string name="i">Wierzchołek 1</string>
    <string name="wartosc">Wartość</string>
    <string name="zmien">ZMIEŃ</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zakres">Liczby od 0 do 4</string>
    <string name="sciezka">Wyznacz ścieżkę</string>
    <string name="textedithint">Tu będzie wartość</string>
</resources>